<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".Favorite_List"
    tools:visibility="visible">


    <TextView
        android:id="@+id/title"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:gravity="center"
        android:text="@string/Favorite_List"
        app:layout_constraintBottom_toTopOf="@id/spinner_Start_Building"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spinner_Start_Building"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/spinner_Dest_Building"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:visibility="visible" />

    <Spinner
        android:id="@+id/spinner_Dest_Building"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_Start_Building"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_GoToMA"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="225dp"
        android:gravity="center_horizontal"
        android:text="@string/previous"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_Dest_Building"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_deleteFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:text="@string/Delete"
        app:layout_constraintEnd_toStartOf="@id/button_View"
        app:layout_constraintTop_toBottomOf="@id/button_addFav" />

    <Button
        android:id="@+id/button_addFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:text="@string/Add"
        app:layout_constraintEnd_toStartOf="@id/button_View"
        app:layout_constraintTop_toBottomOf="@id/spinner_Dest_Building" />

    <Button
        android:id="@+id/button_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/view_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_Dest_Building" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/clear_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toEndOf="@id/button_deleteFav"
        app:layout_constraintTop_toBottomOf="@id/button_View" />

</androidx.constraintlayout.widget.ConstraintLayout>