<resources>
    <string name="app_name">GMU_CampusConstruction_WorkAround</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Delete">Delete</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- names for Buttons and spinners-->
    <string name="Quick_Route">Quick Route</string>
    <string name="schedule_route">Schedule Route</string>
    <string name="Favorite_List">Favorites List</string>
    <string name="View_Favorites">View Favorites</string>
    <string name="Add_Favorite">Add to Favorites</string>
    <string name="Start_Building">Start Building</string>
    <string name="Destination_Building">Destination</string>
    <string name="Get_Route">Get Route</string>
    <string name="Back">Back</string>
    <string name="View_day">View Day</string>
    <string name="Delete_route">Delete Route</string>
    <string name="Add_route">Add Route</string>
    <string name="Add">Add</string>
    <string name="view_all">View All</string>
    <string name="clear_all">Clear All</string>
    <string name="configure">Configure</string>




    <!--the the list for the Start Spinner-->
    <string-array name="Start_Buildings">
        <item>Aquia Building</item>
        <item>Art and Design Building</item>
        <item>David King Hall</item>
        <item>East Building</item>
        <item>Enterprise Hall</item>
        <item>Exploratory Hall</item>
        <item>Innovation Hall</item>
        <item>Johnson Center</item>
        <item>Krug Hall</item>
        <item>Lecture Hall</item>
        <item>Mason Hall</item>
        <item>Music/Theater Building</item>
        <item>Nguyen Engineering Building</item>
        <item>Planetary Hall</item>
        <item>Research Hall</item>
        <item>Robinson Hall B</item>
        <item>SUB 1</item>
        <item>Thompson Hall</item>
        <item>West Building</item>
    </string-array>

    <!--the list for the upper part of campus-->
    <string-array name="Upper_Part">
        <item>Aquia Building</item>
        <item>East Building</item>
        <item>Krug Hall</item>
        <item>Lecture Hall</item>
        <item>Robinson Hall B</item>
        <item>SUB 1</item>
        <item>Thompson Hall</item>
        <item>West Building</item>
    </string-array>

    <!--the list for the lower part of campus-->
    <string-array name="Lower_Part">
        <item>Art and Design Building</item>
        <item>Enterprise Hall</item>
        <item>Innovation Hall</item>
        <item>Nguyen Engineering Building</item>
        <item>Research Hall</item>
    </string-array>

    <!--the list for the middle part of campus-->
    <string-array name="Middle_Part">
        <item>College Hall</item>
        <item>David King Hall</item>
        <item>Exploratory Hall</item>
        <item>Mason Hall</item>
        <item>Music/Theater Building</item>
        <item>Planetary Hall</item>
    </string-array>

    <!--Destination array for the upper part of campus-->
    <string-array name="UP_Dest">
        <item>Art and Design Building</item>
        <item>College Hall</item>
        <item>David King Hall</item>
        <item>Enterprise Hall</item>
        <item>Exploratory Hall</item>
        <item>Innovation Hall</item>
        <item>Mason Hall</item>
        <item>Music/Theater Building</item>
        <item>Nguyen Engineering Building</item>
        <item>Planetary Hall</item>
        <item>Research Hall</item>
    </string-array>

    <!--Destination array for the JC-->
    <string-array name="JC_Dest">
        <item>East Building</item>
        <item>Enterprise Hall</item>
        <item>Exploratory Hall</item>
        <item>Krug Hall</item>
        <item>Lecture Hall</item>
        <item>Nguyen Engineering Building</item>
        <item>Research Hall</item>
        <item>West Building</item>
    </string-array>

    <!--The days for the schedule-->
    <string-array name="Days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>


</resources>
