...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/button_GoToFL"
        android:layout_width="96dp"
        android:layout_height="70dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:layout_marginBottom="148dp"
        android:adjustViewBounds="true"
...
